# warp-sqlx

./: Cargo.toml  readme.md
sql/: create_tables.sql
src/: db.rs  main.rs
src/model/: mod.rs  product.rs
src/web/: mod.rs  product_filter.rs
