[package]
name = "warp_sqlx"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", default-features = false }
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlb = { version = "0.0.8", features = [] }
sqlx = { version = "0.6.2", features = ["postgres", "macros", "runtime-tokio-rustls"] }
tokio = { version = "1.24.2", features = ["full"] }
warp = "0.3.3"
